[gd_scene load_steps=18 format=3 uid="uid://da6grjhiqdcnw"]

<<<<<<< HEAD:EduCity/learning_scene.tscn
[ext_resource type="Texture2D" uid="uid://80fs6jct5m70" path="res://Sprites/Icon/LearningScene/Security.png" id="1_j83q0"]
[ext_resource type="Script" path="res://learning_scene.gd" id="1_mgcs3"]
[ext_resource type="FontFile" uid="uid://cppwgcygfbwta" path="res://setting/assets/Font/Roboto/Roboto-Bold.ttf" id="2_68ux3"]
[ext_resource type="Texture2D" uid="uid://cljvkg1gh4ik6" path="res://Sprites/Icon/LearningScene/AI.png" id="2_le277"]
[ext_resource type="FontFile" uid="uid://dpl1elp7ttg1v" path="res://setting/assets/Font/Roboto/Roboto-Light.ttf" id="3_u8hkq"]
[ext_resource type="Texture2D" uid="uid://3usvyjxv3ei2" path="res://Sprites/Icon/LearningScene/Cloud.png" id="4_p0bx5"]
[ext_resource type="Texture2D" uid="uid://h143riuulra4" path="res://Sprites/Icon/LearningScene/DS.png" id="5_f3ob3"]
[ext_resource type="Texture2D" uid="uid://des76ywgp2n68" path="res://Sprites/Icon/LearningScene/Automation.png" id="6_v0l1a"]
=======
[ext_resource type="Script" path="res://LearningPage/learning_scene.gd" id="1_2vlb4"]
[ext_resource type="FontFile" uid="uid://cppwgcygfbwta" path="res://setting/assets/Font/Roboto/Roboto-Bold.ttf" id="2_ic5kt"]
[ext_resource type="Texture2D" uid="uid://cljvkg1gh4ik6" path="res://LearningPage/Icon/LearningScene/AI.png" id="3_d6mea"]
[ext_resource type="FontFile" uid="uid://dpl1elp7ttg1v" path="res://setting/assets/Font/Roboto/Roboto-Light.ttf" id="4_thi3p"]
[ext_resource type="Texture2D" uid="uid://80fs6jct5m70" path="res://LearningPage/Icon/LearningScene/Security.png" id="5_vcy36"]
[ext_resource type="Texture2D" uid="uid://3usvyjxv3ei2" path="res://LearningPage/Icon/LearningScene/Cloud.png" id="6_gyhmw"]
[ext_resource type="Texture2D" uid="uid://h143riuulra4" path="res://LearningPage/Icon/LearningScene/DS.png" id="7_2bdkh"]
[ext_resource type="Texture2D" uid="uid://des76ywgp2n68" path="res://LearningPage/Icon/LearningScene/Automation.png" id="8_j6vq3"]
>>>>>>> e909be45fc60c7b7448d0c2ff63994448a736119:EduCity/LearningPage/learning_scene.tscn

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mu525"]
bg_color = Color(0.215686, 0.47451, 0.905882, 1)
shadow_color = Color(0.442911, 0.442911, 0.442911, 1)
shadow_size = 6
shadow_offset = Vector2(3, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y0flk"]
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pl6wn"]
bg_color = Color(0.215686, 0.47451, 0.905882, 1)
shadow_color = Color(0.454902, 0.454902, 0.454902, 0.6)
shadow_size = 2
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_24pv0"]
bg_color = Color(0.215686, 0.47451, 0.905882, 1)
shadow_color = Color(0.454902, 0.454902, 0.454902, 0.6)
shadow_size = 2
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5c7vv"]
bg_color = Color(0.215686, 0.47451, 0.905882, 1)
shadow_color = Color(0.454902, 0.454902, 0.454902, 0.6)
shadow_size = 2
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vkqwb"]
shadow_size = 2
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vma5y"]
shadow_size = 2
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eleua"]
shadow_size = 2
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p48kg"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 5
border_color = Color(0, 0, 0, 0)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="LearningScene" type="Node2D"]
script = ExtResource("1_2vlb4")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="BackButton" type="Button" parent="."]
offset_left = 63.0
offset_top = 971.0
offset_right = 263.0
offset_bottom = 1031.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_mu525")
text = "BACK"

[node name="AI" type="Node2D" parent="."]

[node name="AIButton" type="Button" parent="AI" groups=["Modules"]]
offset_left = 460.0
offset_top = 64.0
offset_right = 1460.0
offset_bottom = 204.0
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_ic5kt")
theme_override_font_sizes/font_size = 50
text = "       Artificial Intelligence"
icon = ExtResource("3_d6mea")
alignment = 0
expand_icon = true

[node name="Status" type="Label" parent="AI/AIButton"]
layout_mode = 0
offset_left = 822.0
offset_top = 58.0
offset_right = 972.0
offset_bottom = 92.0
theme_override_fonts/font = ExtResource("4_thi3p")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_y0flk")
text = "Not started"
horizontal_alignment = 1

[node name="Security" type="Node2D" parent="."]

[node name="SecurityButton" type="Button" parent="Security" groups=["Modules"]]
offset_left = 460.0
offset_top = 256.0
offset_right = 1460.0
offset_bottom = 396.0
theme_override_fonts/font = ExtResource("2_ic5kt")
theme_override_font_sizes/font_size = 50
text = "       IBM Security"
icon = ExtResource("5_vcy36")
alignment = 0
expand_icon = true

[node name="Status" type="Label" parent="Security/SecurityButton"]
layout_mode = 0
offset_left = 822.0
offset_top = 58.0
offset_right = 972.0
offset_bottom = 92.0
theme_override_fonts/font = ExtResource("4_thi3p")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_y0flk")
text = "Not started"
horizontal_alignment = 1

[node name="Cloud" type="Node2D" parent="."]

[node name="CloudButton" type="Button" parent="Cloud" groups=["Modules"]]
offset_left = 460.0
offset_top = 448.0
offset_right = 1460.0
offset_bottom = 588.0
theme_override_fonts/font = ExtResource("2_ic5kt")
theme_override_font_sizes/font_size = 50
text = "       IBM Cloud"
icon = ExtResource("6_gyhmw")
alignment = 0
expand_icon = true

[node name="Status" type="Label" parent="Cloud/CloudButton"]
layout_mode = 0
offset_left = 822.0
offset_top = 58.0
offset_right = 972.0
offset_bottom = 92.0
theme_override_fonts/font = ExtResource("4_thi3p")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_y0flk")
text = "Not started"
horizontal_alignment = 1

[node name="DS" type="Node2D" parent="."]

[node name="DSButton" type="Button" parent="DS" groups=["Modules"]]
offset_left = 460.0
offset_top = 640.0
offset_right = 1460.0
offset_bottom = 780.0
theme_override_fonts/font = ExtResource("2_ic5kt")
theme_override_font_sizes/font_size = 50
text = "       Data Science"
icon = ExtResource("7_2bdkh")
alignment = 0
expand_icon = true

[node name="Status" type="Label" parent="DS/DSButton"]
layout_mode = 0
offset_left = 822.0
offset_top = 58.0
offset_right = 972.0
offset_bottom = 92.0
theme_override_fonts/font = ExtResource("4_thi3p")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_y0flk")
text = "Not started"
horizontal_alignment = 1

[node name="Automation" type="Node2D" parent="."]

[node name="AutomationButton" type="Button" parent="Automation" groups=["Modules"]]
offset_left = 460.0
offset_top = 832.0
offset_right = 1460.0
offset_bottom = 972.0
theme_override_fonts/font = ExtResource("2_ic5kt")
theme_override_font_sizes/font_size = 50
text = "       IBM Automation"
icon = ExtResource("8_j6vq3")
alignment = 0
expand_icon = true

[node name="Status" type="Label" parent="Automation/AutomationButton"]
layout_mode = 0
offset_left = 822.0
offset_top = 58.0
offset_right = 972.0
offset_bottom = 92.0
theme_override_fonts/font = ExtResource("4_thi3p")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_y0flk")
text = "Not started"
horizontal_alignment = 1

[node name="PopupMenu" type="ColorRect" parent="."]
visible = false
z_as_relative = false
offset_left = 610.0
offset_top = 200.0
offset_right = 1310.0
offset_bottom = 900.0

[node name="Lesson1Button" type="Button" parent="PopupMenu"]
layout_mode = 0
offset_left = 100.0
offset_top = 100.0
offset_right = 400.0
offset_bottom = 200.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_pl6wn")
text = "LESSON 1"

[node name="Lesson2Button" type="Button" parent="PopupMenu"]
layout_mode = 0
offset_left = 100.0
offset_top = 300.0
offset_right = 400.0
offset_bottom = 400.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_24pv0")
text = "LESSON 2"

[node name="Lesson3Button" type="Button" parent="PopupMenu"]
layout_mode = 0
offset_left = 100.0
offset_top = 500.0
offset_right = 400.0
offset_bottom = 600.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_5c7vv")
text = "LESSON 3"

[node name="Quiz1Button" type="Button" parent="PopupMenu"]
layout_mode = 0
offset_left = 480.0
offset_top = 100.0
offset_right = 602.0
offset_bottom = 200.0
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_vkqwb")
text = "QUIZ 1"

[node name="Quiz2Button" type="Button" parent="PopupMenu"]
layout_mode = 0
offset_left = 480.0
offset_top = 300.0
offset_right = 602.0
offset_bottom = 400.0
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_vma5y")
text = "QUIZ 2"

[node name="Quiz3Button" type="Button" parent="PopupMenu"]
layout_mode = 0
offset_left = 480.0
offset_top = 500.0
offset_right = 602.0
offset_bottom = 600.0
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_eleua")
text = "QUIZ 3"

[node name="CloseButton" type="Button" parent="PopupMenu"]
layout_mode = 0
offset_left = 620.0
offset_top = -1.0
offset_right = 700.0
offset_bottom = 49.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_p48kg")
text = "X"
